# cc-qa-bot-azureai

./: .gitignore  README.md  cc_parse_index.py  cc_rag.py  cc_webapp.py  config.toml.sample  env.sample  pyproject.toml  requirements.txt
templates/: index.html
